# PomodoRust

./: .gitignore  ARCHITECTURE.md  BUSINESS_ANALYSIS.md  CHANGELOG.md  COMPREHENSIVE_IMPROVEMENT_REPORT.md  CONTRIBUTING.md  Cargo.toml  GOOD_FIRST_ISSUES.md  IMPROVEMENTS.md  INDEX.md  LAYOUT_FIX_DESIGN.md  Makefile  PROMPT_TEMPLATE.md  README.md  SPECIFICATION.md  build.bat  build.rs
.claude/: session_context.md
.github/workflows/: build.yml  ci.yml  release.yml
docs/: TODO.md
docs/todo-feature/: IMPLEMENTATION-ORDER.md  PHASE-1-DATA-LAYER.md  PHASE-2-TODO-VIEWPORT.md  PHASE-3-TODO-UI.md  PHASE-4-POMODORO-INTEGRATION.md  PHASE-5-POLISH.md
src/: app.rs  error.rs  i18n.rs  lib.rs  main.rs
src/app/: actions.rs  mod.rs  queue_view.rs  system.rs  todo_handler.rs
src/core/: mod.rs  preset.rs  session.rs  timer.rs
src/data/: config.rs  database.rs  export.rs  mod.rs  statistics.rs  todo.rs
src/data/database/: mod.rs  queue_ops.rs  todo_ops.rs
src/ipc/: mod.rs  protocol.rs  server.rs
src/platform/: audio.rs  hotkeys.rs  linux.rs  linux_hotkeys.rs  mod.rs  tray.rs  windows.rs
src/ui/: animations.rs  dashboard.rs  layout.rs  mod.rs  settings.rs  stats.rs  theme.rs  timer_view.rs  titlebar.rs  todo_view.rs  todo_window.rs
src/ui/components/: ascii_art.rs  button.rs  card.rs  circular_progress.rs  icons.rs  mod.rs  slider.rs
src/ui/settings/: components.rs  mod.rs  state.rs
src/ui/stats/: cards.rs  charts.rs  mod.rs
src/ui/theme/: colors.rs  mod.rs
src/ui/timer_view/: mod.rs  tui_style.rs
src/ui/todo_view/: helpers.rs  item.rs  mod.rs
src/utils/: mod.rs
