[package]
name = "pomodorust"
version = "0.1.0"
edition = "2021"
authors = ["gerrux"]
description = "A modern, lightweight Pomodoro timer with Vercel-style dark UI"
license = "MIT"
repository = "https://github.com/gerrux/pomodorust"

[dependencies]
# GUI Framework
eframe = { version = "0.29", default-features = false, features = ["glow", "persistence"] }
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Data & Serialization
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Audio
rodio = { version = "0.19", default-features = false, features = ["wav"] }

# System & Utils
directories = "5.0"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rfd = "0.15"

# Windows-specific
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Controls",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
] }
winreg = "0.52"
notify-rust = "4"

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-fast]
inherits = "release"
opt-level = 3
lto = "thin"

[profile.dev]
opt-level = 1
